# humanoid_vla

./: .gitignore  CLAUDE.md  LAPTOP_SETUP.md  LICENSE  PROJECT_REPORT.md  README.md  install.sh  install_jazzy.sh  install_ros2.sh  requirements.txt  run_verification.sh
.claude/: settings.local.json
docs/: INSTALLATION.md  VERIFICATION_QUICKSTART.md  phase_a_baseline.md  phase_a_testing_guide.md
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/src/vla_mujoco_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/vla_mujoco_bridge/launch/: vla_system.launch.py
ros2_ws/src/vla_mujoco_bridge/vla_mujoco_bridge/: arm_teleop_node.py  bridge_node.py  demo_recorder.py  mujoco_sim.py  task_manager_node.py  teleop_node.py
scripts/: act_model.py  convert_to_lerobot.py  domain_randomization.py  eval_generalization.py  evaluate.py  evaluate_bimanual.py  generate_bimanual_demos.py  generate_demos.py  live_bimanual.py  live_demo.py  physics_sim.py  record_demo_videos.py  train_act.py  train_bimanual.py  visualize_configs.py  visualize_demo.py  visualize_perception_action.py
sim/: g1_with_camera.xml  test_g1.py
sim/models/: g1_29dof.xml
study/: 01_project_deep_dive.md  02_scripted_expert_demo_generation.md  03_act_training_and_evaluation.md  04_bimanual_physics_grasping.md  05_system_integration.md  06_domain_randomization_and_generalization.md
tasks/: lessons.md  ozkan_todo.md  plan.md  todo.md
tests/: test_l0_standalone.py
v2/: README.md  __init__.py  common.py
v2/.generated/: g1_29dof_v2.xml  g1_with_static_camera_v2.xml
(+26 files in other folders)
